fix(month): workweek alignment issues

--- a/ui/src/css/calendar-variables.sass
+++ b/ui/src/css/calendar-variables.sass
@@ -39,8 +39,8 @@ $calendar-separator-dark                  : #eeeeee
 
 $calendar-day-label-height                : 1em
 $calendar-day-label-radius                : 50%
-$calendar-work-week-width                 : 50px
-$calendar-work-week-font-size             : 1.4em
+$calendar-work-week-width                 : 2.0em
+$calendar-work-week-font-size             : 1.2em
 $calendar-workweek-font-weight            : 600
 $calendar-resources-body-width            : 100px
 $calendar-intervals-body-width            : 50px
