--- a/ui/src/css/calendar-weekly.sass
+++ b/ui/src/css/calendar-weekly.sass
@@ -102,11 +102,11 @@
   &__head-workweek
     display: flex
     flex-wrap: nowrap
-    width: $calendar-work-week-width
     user-select: none
     padding: 0 4px
-    font-size: 1rem
-    min-width: 1.5em
+    min-width: $calendar-work-week-width
+    max-width: $calendar-work-week-width
+    font-size: $calendar-work-week-font-size
     justify-content: center
 
   &__head-weekday
@@ -152,10 +152,10 @@
   &__workweek
     display: flex
     flex-wrap: nowrap
-    width: $calendar-work-week-width
     user-select: none
-    padding: 0
-    min-width: 1.5em
+    padding: 0 4px
+    min-width: $calendar-work-week-width
+    max-width: $calendar-work-week-width
     font-size: $calendar-work-week-font-size
     align-items: center
 
